--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "jitsi-meet",
+  "name": "m-health",
   "version": "0.0.0",
   "description": "A sample app for the Jitsi Videobridge",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jitsi/jitsi-meet"
+    "url": "git://github.com/BlakeEram/m-health"
   },
   "keywords": [
     "jingle",
@@ -36,6 +36,8 @@
     "autosize": "1.18.13",
     "es6-iterator": "2.0.3",
     "es6-symbol": "3.1.1",
+    "file-saver": "^1.3.8",
+    "html-screen-capture-js": "^1.0.7",
     "i18next": "8.4.3",
     "i18next-browser-languagedetector": "2.0.0",
     "i18next-xhr-backend": "1.4.2",
@@ -45,6 +47,7 @@
     "jquery-contextmenu": "2.4.5",
     "jquery-i18next": "1.2.0",
     "js-md5": "0.6.1",
+    "jszip": "^3.1.5",
     "jwt-decode": "2.2.0",
     "lib-jitsi-meet": "github:jitsi/lib-jitsi-meet#39eea17e7e2f8ff4cc273239a6e73f2a149b96e2",
     "lodash": "4.17.4",
@@ -52,7 +55,7 @@
     "postis": "2.2.0",
     "prop-types": "15.6.0",
     "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react-dom": "^16.2.0",
     "react-i18next": "4.8.0",
     "react-native": "0.51.0",
     "react-native-background-timer": "2.0.0",
@@ -68,6 +71,8 @@
     "react-native-vector-icons": "4.4.2",
     "react-native-webrtc": "github:jitsi/react-native-webrtc#84aee6693195c5be6b6f5f794a1e52dc7913fb3b",
     "react-redux": "5.0.6",
+    "react-webcam": "^0.5.0",
+    "recordrtc": "^5.4.6",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "strophe.js": "github:jitsi/strophejs#1.2.14-1",
@@ -75,6 +80,11 @@
     "styled-components": "1.4.6",
     "url-polyfill": "github:github/url-polyfill#39734186de44612bc5a16eb25f5407adcc5b2e7c",
     "uuid": "3.1.0",
+    "videojs": "^1.0.0",
+    "videojs-record": "^2.2.0",
+    "videojs-wavesurfer": "^2.3.2",
+    "wavesurfer": "^1.3.4",
+    "webrtc-adapter": "^6.1.5",
     "xmldom": "0.1.27"
   },
   "devDependencies": {
