--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lib-jitsi-meet": "github:jitsi/lib-jitsi-meet#39eea17e7e2f8ff4cc273239a6e73f2a149b96e2",
     "lodash": "4.17.4",
     "moment": "2.19.4",
+    "mysql": "^2.15.0",
     "postis": "2.2.0",
     "prop-types": "15.6.0",
     "react": "16.2.0",
