--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@atlaskit/theme": "2.4.0",
     "@atlaskit/tooltip": "7.0.0",
     "autosize": "1.18.13",
+    "body-parser": "^1.18.3",
     "es6-iterator": "2.0.3",
     "es6-symbol": "3.1.1",
+    "express": "^4.16.3",
     "file-saver": "^1.3.8",
     "html-screen-capture-js": "^1.0.7",
     "i18next": "8.4.3",
@@ -84,6 +86,7 @@
     "videojs-wavesurfer": "^2.3.2",
     "wavesurfer": "^1.3.4",
     "webrtc-adapter": "^6.1.5",
+    "xmlbuilder": "^10.0.0",
     "xmldom": "0.1.27"
   },
   "devDependencies": {
