--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "recordrtc": "^5.4.6",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
+    "request": "^2.88.0",
     "styled-components": "1.4.6",
     "url-polyfill": "github:github/url-polyfill#39734186de44612bc5a16eb25f5407adcc5b2e7c",
     "uuid": "3.1.0",
