--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@atlaskit/theme": "2.4.0",
     "@atlaskit/tooltip": "7.0.0",
     "autosize": "1.18.13",
+    "blob-to-base64": "^1.0.1",
     "body-parser": "^1.18.3",
     "es6-iterator": "2.0.3",
     "es6-symbol": "3.1.1",
