--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "redux-thunk": "2.2.0",
     "request": "^2.88.0",
     "styled-components": "1.4.6",
+    "update": "^0.7.4",
     "url-polyfill": "github:github/url-polyfill#39734186de44612bc5a16eb25f5407adcc5b2e7c",
     "uuid": "3.1.0",
     "videojs": "^1.0.0",
